--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=9090
 management.endpoints.web.exposure.include=*
 
 my.app.language=eng
+
+server.error.include-binding-errors=always
+server.error.include-exception=true
+server.error.include-message=always
