--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ management:
     web:
       exposure:
         include: '*'
+  endpoint:
+    env:
+      show-values: always
 my:
   app:
     language: eng
